force-app/main/default/objects/Master_Framework_Lot_Contact__c/Master_Framework_Lot_Contact__c.object-meta.xml
<CustomObject>
    <description>Holds association between Framework Lot and Contact</description>
    <label>Framework Lot Supplier Contact</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Lot Supplier Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>