force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <formula>Supplier_Contact__r.Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address1</label>
    <type>Text</type>
</CustomField>