force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <formula>Supplier_Contact__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address2</label>
    <type>Text</type>
</CustomField>