force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <formula>Supplier_Contact__r.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address3</label>
    <type>Text</type>
</CustomField>