force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Categorisation__c.field-meta.xml
<CustomField>
    <fullName>Categorisation__c</fullName>
    <formula>Master_Framework_Lot__r.Master_Framework__r.CCS_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categorisation</label>
    <type>Text</type>
</CustomField>