force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>TEXT(Supplier_Contact__r.Salutation) + &quot; &quot;+ Supplier_Contact__r.FirstName + &quot; &quot;+  Supplier_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>