force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <formula>TEXT(Supplier_Contact__r.Contact_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>