force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <formula>TEXT(Supplier_Contact__r.Account.DUNS_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DUNS</label>
    <type>Text</type>
</CustomField>