force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Master_Framework_Lot__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework Lot</label>
    <referenceTo>Master_Framework_Lot__c</referenceTo>
    <relationshipLabel>Framework Lot Supplier Contacts</relationshipLabel>
    <relationshipName>Framework_Lot_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>