force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Master_Framework_Lot_Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot_Contact_External_Id__c</fullName>
    <description>External Id (Not created by Salesforce) to allow lookup using external reference numbers for data loading.</description>
    <externalId>true</externalId>
    <label>Master Framework Lot Contact External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>