force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Organisation_ID__c.field-meta.xml
<CustomField>
    <fullName>Organisation_ID__c</fullName>
    <formula>Supplier_Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation ID</label>
    <type>Text</type>
</CustomField>