force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <formula>Supplier_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Name</label>
    <type>Text</type>
</CustomField>