force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <description>US0564</description>
    <formula>Supplier_Contact__r.Portal_User_Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this Contact is a Portal Enabled User, do not update their email address details as this is used for Single Sign On.</inlineHelpText>
    <label>Portal User</label>
    <type>Text</type>
</CustomField>