force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Appears on the website as the contact person for a given lot/supplier combination, but only if the website contact is ticked.</inlineHelpText>
    <label>Supplier Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Framework Lot Supplier Contacts</relationshipLabel>
    <relationshipName>Framework_Lot_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>