force-app/main/default/objects/Master_Framework_Lot_Contact__c/fields/Website_Contact__c.field-meta.xml
<CustomField>
    <fullName>Website_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked this will appear as the person on a given lot/supplier combination.  Only one contact per lot/supplier combination should be selected as a website contact.</inlineHelpText>
    <label>Website Contact</label>
    <type>Checkbox</type>
</CustomField>